test/compile_errors/stage1/obj/atomic_orderings_of_fence_Acquire_or_stricter.zig
export fn entry() void {
    @fence(.Monotonic);
}

// atomic orderings of fence Acquire or stricter
//
// tmp.zig:2:12: error: atomic ordering must be Acquire or stricter
